apps/routers/socryx-topled-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: socryx-topled
  namespace: traefik-staging
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`socryx-topled.arvo.network`)
    services:
    - kind: Service
      name: ingress-internal-ingress-nginx-controller
      namespace: ingress-nginx
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: socryx-topled
  namespace: traefik-staging
spec:
  entryPoints:
    - websecure
  routes:
  - match: HostSNI(`socryx-topled.arvo.network`)
    services:
    - name: ingress-public-ingress-nginx-controller
      namespace: ingress-nginx
      port: 443
  tls:
    passthrough: true
